--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_jdevlZ2GM"
-      REACT_APP_CLIENT_ID: "1ikhcg93sjgt3q1mntc6a6u10i"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_QUrREld1Y"
+      REACT_APP_CLIENT_ID: "7np9qf2gf99taruus869pegb2s"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
